fixed -- admin promotion bar's dismiss button not visible when review optin is showing.

--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -5235,6 +5235,7 @@ button.button__greyBg:hover:disabled {
     background: #5E2EFF;
     color: white;
     padding: 15px 10px;
+    position: relative;
 }
 
 .eael-admin-promotion-message p {
